<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.faktorips</groupId>
        <artifactId>faktorips-runtime-parent</artifactId>
        <version>25.1.4-SNAPSHOT</version>
        <relativePath>../../runtime/pom.xml</relativePath>
    </parent>
    
    <artifactId>faktorips-devtools-parent</artifactId>
    <packaging>pom</packaging>

    <name>Faktor-IPS Devtools Parent</name>
    <description>Defines versions for and configures Maven plugins used to build the Faktor-IPS design-time libraries</description>

    <properties>
        <java.version>17</java.version>
    </properties>
    
    <modules>
        <module>bom/eclipse-platform-dependencies</module>
        <module>bom</module>
        <module>faktorips-abstraction</module>
        <module>faktorips-abstraction-plainjava</module>
        <module>faktorips-abstraction-testsetup</module>
        <module>faktorips-dtfl-common</module>
        <module>faktorips-fl</module>
        <module>faktorips-schemas</module>
        <module>faktorips-util</module>
        <module>faktorips-model-plainjava</module>
        <module>../eclipse/plugins/tests/org.faktorips.devtools.model.test/plain-java-test</module>
    </modules>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.faktorips</groupId>
                <artifactId>faktorips-devtools-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.faktorips</groupId>
                <artifactId>eclipse-platform-dependencies</artifactId>
                <version>${faktorips.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate-pde-source-header</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attached-p2-metadata</id>
                        <phase>package</phase>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                        <configuration>
                            <supportedProjectTypes>
                                <value>bundle</value>
                                <value>jar</value>
                            </supportedProjectTypes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>